Fix z-indexing of globalnav, You menu, and the content

--- a/src/sass/partials/_globalnav.scss
+++ b/src/sass/partials/_globalnav.scss
@@ -16,7 +16,7 @@
         position: absolute;
         left: 0;
         top: $brandbarheight;
-        z-index: 9990;
+        z-index: 9980;
         background: $white;
         border-bottom: 1px solid $grey;
     }
