--- a/src/sass/partials/_stage.scss
+++ b/src/sass/partials/_stage.scss
@@ -40,6 +40,7 @@ body.stage {
         width: 100vw;
         left: 50%;
         margin-left: -50vw;
+        z-index: 9999;
     }
     
     #sb-backdrop,
